k3s-cluster/apps/default/mastodon/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon
  labels:
    app.kubernetes.io/instance: mastodon
    app.kubernetes.io/name: mastodon
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/server-snippets: |
      location /api/v1/streaming {
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto https;
        proxy_set_header Proxy "";

        proxy_pass http://mastodon-streaming:80;
        proxy_buffering off;
        proxy_redirect off;
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection $connection_upgrade;

        tcp_nodelay on;
      }

spec:
  ingressClassName: "nginx"
  rules:
    - host: &host "toot.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mastodon-web
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: mastodon-tls
